@@ -59,7 +59,7 @@ add_subdirectory(plugins/soundkonverter_codec_fluidsynth)
 add_subdirectory(plugins/soundkonverter_codec_wavpack)
 add_subdirectory(plugins/soundkonverter_codec_shorten)
 add_subdirectory(plugins/soundkonverter_codec_musepack)
-# add_subdirectory(plugins/soundkonverter_codec_speex)
+add_subdirectory(plugins/soundkonverter_codec_speex)
 add_subdirectory(plugins/soundkonverter_replaygain_vorbisgain)
 add_subdirectory(plugins/soundkonverter_replaygain_metaflac)
 add_subdirectory(plugins/soundkonverter_replaygain_mp3gain)
