@@ -1,0 +1,306 @@
+
+#include "speexcodecglobal.h"
+
+#include "speexcodecwidget.h"
+#include "../../core/conversionoptions.h"
+
+// #include <math.h>
+
+#include <QLayout>
+#include <QLabel>
+#include <KLocale>
+#include <KComboBox>
+#include <QDoubleSpinBox>
+#include <QSlider>
+// #include <QCheckBox>
+#include <QLineEdit>
+
+
+SpeexCodecWidget::SpeexCodecWidget()
+    : CodecWidget(),
+    currentFormat( "speex" )
+{
+    QGridLayout *grid = new QGridLayout( this );
+    grid->setContentsMargins( 0, 0, 0, 0 );
+    grid->setSpacing( 6 );
+
+    // set up encoding options selection
+
+    QHBoxLayout *topBox = new QHBoxLayout();
+    grid->addLayout( topBox, 0, 0 );
+
+    QLabel *lMode = new QLabel( i18n("Mode")+":", this );
+    topBox->addWidget( lMode );
+    cMode = new KComboBox( this );
+    cMode->addItem( i18n("Quality") );
+    cMode->addItem( i18n("Bitrate") );
+    connect( cMode, SIGNAL(activated(int)), this, SLOT(modeChanged(int)) );
+    connect( cMode, SIGNAL(activated(int)), SIGNAL(somethingChanged()) );
+    topBox->addWidget( cMode );
+
+    sQuality = new QSlider( Qt::Horizontal, this );
+    connect( sQuality, SIGNAL(valueChanged(int)), this, SLOT(qualitySliderChanged(int)) );
+    connect( sQuality, SIGNAL(valueChanged(int)), SIGNAL(somethingChanged()) );
+    topBox->addWidget( sQuality );
+
+    dQuality = new QDoubleSpinBox( this );
+    dQuality->setRange( 8, 320 );
+    dQuality->setSuffix( " kbps" );
+    dQuality->setFixedWidth( dQuality->sizeHint().width() );
+    connect( dQuality, SIGNAL(valueChanged(double)), this, SLOT(qualitySpinBoxChanged(double)) );
+    connect( dQuality, SIGNAL(valueChanged(double)), SIGNAL(somethingChanged()) );
+    topBox->addWidget( dQuality );
+
+    topBox->addStretch();
+
+    QHBoxLayout *midBox = new QHBoxLayout();
+    grid->addLayout( midBox, 1, 0 );
+
+    midBox->addStretch();
+
+    grid->setRowStretch( 2, 1 );
+
+    modeChanged( 0 );
+}
+
+SpeexCodecWidget::~SpeexCodecWidget()
+{}
+
+// TODO optimize
+int SpeexCodecWidget::bitrateForQuality( double quality )
+{
+    return quality*100/3;
+}
+
+// TODO optimize
+double SpeexCodecWidget::qualityForBitrate( int bitrate )
+{
+    return (double)bitrate*3/100;
+}
+
+ConversionOptions *SpeexCodecWidget::currentConversionOptions()
+{
+    ConversionOptions *options = new ConversionOptions();
+
+    if( cMode->currentText()==i18n("Quality") )
+    {
+        options->qualityMode = ConversionOptions::Quality;
+        options->quality = dQuality->value();
+        options->bitrate = bitrateForQuality( options->quality );
+        options->bitrateMode = ConversionOptions::Vbr;
+        options->bitrateMin = 0;
+        options->bitrateMax = 0;
+    }
+    else
+    {
+        options->qualityMode = ConversionOptions::Bitrate;
+        options->bitrate = dQuality->value();
+        options->quality = qualityForBitrate( options->bitrate );
+        options->bitrateMode = ConversionOptions::Abr;
+        options->bitrateMin = 0;
+        options->bitrateMax = 0;
+    }
+
+    return options;
+}
+
+bool SpeexCodecWidget::setCurrentConversionOptions( ConversionOptions *_options )
+{
+    if( !_options || _options->pluginName != global_plugin_name )
+        return false;
+
+    ConversionOptions *options = _options;
+
+    if( options->qualityMode == ConversionOptions::Quality )
+    {
+        cMode->setCurrentIndex( cMode->findText(i18n("Quality")) );
+        modeChanged( cMode->currentIndex() );
+        dQuality->setValue( options->quality );
+    }
+    else
+    {
+        cMode->setCurrentIndex( cMode->findText(i18n("Bitrate")) );
+        modeChanged( cMode->currentIndex() );
+        dQuality->setValue( options->bitrate );
+    }
+
+    return true;
+}
+
+void SpeexCodecWidget::setCurrentFormat( const QString& format )
+{
+    if( currentFormat == format )
+        return;
+
+    currentFormat = format;
+    setEnabled( currentFormat != "wav" );
+}
+
+QString SpeexCodecWidget::currentProfile()
+{
+    if( currentFormat == "wav" )
+    {
+        return i18n("Lossless");
+    }
+    else if( cMode->currentIndex() == 0 && dQuality->value() == 2.0 )
+    {
+        return i18n("Very low");
+    }
+    else if( cMode->currentIndex() == 0 && dQuality->value() == 3.0 )
+    {
+        return i18n("Low");
+    }
+    else if( cMode->currentIndex() == 0 && dQuality->value() == 4.0 )
+    {
+        return i18n("Medium");
+    }
+    else if( cMode->currentIndex() == 0 && dQuality->value() == 5.0 )
+    {
+        return i18n("High");
+    }
+    else if( cMode->currentIndex() == 0 && dQuality->value() == 6.0 )
+    {
+        return i18n("Very high");
+    }
+
+    return i18n("User defined");
+}
+
+bool SpeexCodecWidget::setCurrentProfile( const QString& profile )
+{
+    if( profile == i18n("Very low") )
+    {
+        cMode->setCurrentIndex( 0 );
+        modeChanged( 0 );
+        sQuality->setValue( 200 );
+        dQuality->setValue( 2.0 );
+        return true;
+    }
+    else if( profile == i18n("Low") )
+    {
+        cMode->setCurrentIndex( 0 );
+        modeChanged( 0 );
+        sQuality->setValue( 300 );
+        dQuality->setValue( 3.0 );
+        return true;
+    }
+    else if( profile == i18n("Medium") )
+    {
+        cMode->setCurrentIndex( 0 );
+        modeChanged( 0 );
+        sQuality->setValue( 400 );
+        dQuality->setValue( 4.0 );
+        return true;
+    }
+    else if( profile == i18n("High") )
+    {
+        cMode->setCurrentIndex( 0 );
+        modeChanged( 0 );
+        sQuality->setValue( 500 );
+        dQuality->setValue( 5.0 );
+        return true;
+    }
+    else if( profile == i18n("Very high") )
+    {
+        cMode->setCurrentIndex( 0 );
+        modeChanged( 0 );
+        sQuality->setValue( 600 );
+        dQuality->setValue( 6.0 );
+        return true;
+    }
+
+    return false;
+}
+
+QDomDocument SpeexCodecWidget::customProfile()
+{
+    QDomDocument profile("soundkonverter_profile");
+    QDomElement root = profile.createElement("soundkonverter");
+    root.setAttribute("type","profile");
+    root.setAttribute("codecName",currentFormat);
+    profile.appendChild(root);
+    QDomElement encodingOptions = profile.createElement("encodingOptions");
+    encodingOptions.setAttribute("qualityMode",cMode->currentIndex());
+    encodingOptions.setAttribute("quality",dQuality->value());
+    root.appendChild(encodingOptions);
+    return profile;
+}
+
+bool SpeexCodecWidget::setCustomProfile( const QString& profile, const QDomDocument& document )
+{
+    Q_UNUSED(profile)
+
+    QDomElement root = document.documentElement();
+    QDomElement encodingOptions = root.elementsByTagName("encodingOptions").at(0).toElement();
+    cMode->setCurrentIndex( encodingOptions.attribute("qualityMode").toInt() );
+    modeChanged( cMode->currentIndex() );
+    sQuality->setValue( (int)(encodingOptions.attribute("quality").toDouble()*100) );
+    dQuality->setValue( encodingOptions.attribute("quality").toDouble() );
+    return true;
+}
+
+int SpeexCodecWidget::currentDataRate()
+{
+    int dataRate;
+
+    if( currentFormat == "wav" )
+    {
+        dataRate = 10590000;
+    }
+    else
+    {
+        if( cMode->currentIndex() == 0 )
+        {
+            dataRate = 500000 + dQuality->value()*150000;
+            if( dQuality->value() > 7 ) dataRate += (dQuality->value()-7)*250000;
+            if( dQuality->value() > 9 ) dataRate += (dQuality->value()-9)*800000;
+        }
+        else
+        {
+            dataRate = dQuality->value()/8*60*1000;
+        }
+    }
+
+    return dataRate;
+}
+
+void SpeexCodecWidget::modeChanged( int mode )
+{
+    if( mode == 0 )
+    {
+        sQuality->setRange( 0, 10 );
+        sQuality->setSingleStep( 1 );
+        dQuality->setRange( 0, 10 );
+        dQuality->setSingleStep( 1 );
+        dQuality->setDecimals( 0 );
+        dQuality->setSuffix( "" );
+        sQuality->setValue( 8 );
+        dQuality->setValue( 8 );
+//         dQuality->setValue( qualityForBitrate(dQuality->value()) );
+//         qualitySpinBoxChanged( dQuality->value() );
+    }
+    else
+    {
+        sQuality->setRange( 8, 320 );
+        sQuality->setSingleStep( 8 );
+        dQuality->setRange( 8, 320 );
+        dQuality->setSingleStep( 8 );
+        dQuality->setDecimals( 0 );
+        dQuality->setSuffix( " kbps" );
+        sQuality->setValue( 160 );
+        dQuality->setValue( 160 );
+//         dQuality->setValue( bitrateForQuality(dQuality->value()) );
+//         qualitySpinBoxChanged( dQuality->value() );
+    }
+}
+
+void SpeexCodecWidget::qualitySliderChanged( int quality )
+{
+    dQuality->setValue( quality );
+}
+
+void SpeexCodecWidget::qualitySpinBoxChanged( double quality )
+{
+    sQuality->setValue( quality );
+}
+
