@@ -3,6 +3,7 @@
 -Add: Make it possible to use user defined arguments with ffmpeg
 -Add: Re-add aac/m4a encoding to the ffmpeg plugin
 (not completed yet)-Add: Aften plugin
+(not completed yet)-Add: Speex plugin
 -Add: Plugin info dialog
 -Change: Query ffmpeg for supported codecs
 
